// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchContainer render Adding a track to the mix works as expected 1`] = `
Array [
  Object {
    "type": "actionRemoveFromSearchResults",
    "uris": Array [
      "https://open.spotify.com/track/0c41pMosF5Kqwwetrack1",
    ],
  },
  Object {
    "track": Object {
      "album": Object {
        "name": "Album name 1",
      },
      "artist": Object {
        "name": "Artist name 1",
      },
      "image": "image1",
      "name": "Track name 1",
      "uri": "https://open.spotify.com/track/0c41pMosF5Kqwwetrack1",
    },
    "type": "curateAddTrackToMix",
  },
]
`;

exports[`SearchContainer render Adding a track works as expected 1`] = `
Array [
  Object {
    "open": true,
    "type": "actionToggleSearchSidebar",
  },
  Object {
    "key": "searchGetTracks",
    "params": Object {
      "options": Object {
        "limit": 20,
        "offset": 0,
      },
      "query": "happy",
    },
    "type": "actionTrackSearch",
  },
  Object {
    "type": "actionRemoveFromSearchResults",
    "uris": Array [
      "https://open.spotify.com/track/0c41pMosF5Kqwwetrack1",
    ],
  },
  Object {
    "key": "tracklist.add",
    "params": Object {
      "uris": Array [
        "spotify:track:0c41pMosF5Kqwwetrack1",
      ],
    },
    "type": "actionSend",
  },
  Object {
    "query": "spam",
    "type": "actionStoreSearchQuery",
  },
  Object {
    "key": "searchGetTracks",
    "params": Object {
      "options": Object {
        "limit": 20,
        "offset": 20,
      },
      "query": "happy",
    },
    "type": "actionTrackSearch",
  },
]
`;

exports[`SearchContainer render Adding tracks from the mix works as expected 1`] = `
Array [
  Object {
    "key": "tracklist.add",
    "params": Object {
      "uris": Array [
        "spotify:track:0c41pMosF5Kqwwetrack2",
        "spotify:track:0c41pMosF5Kqwwetrack3",
      ],
    },
    "type": "actionSend",
  },
  Object {
    "type": "searchClearMix",
  },
]
`;

exports[`SearchContainer render Does not add when more than 5 already added 1`] = `
Array [
  Object {
    "open": true,
    "type": "actionToggleSearchSidebar",
  },
  Object {
    "open": false,
    "type": "actionToggleSearchSidebar",
  },
]
`;

exports[`SearchContainer render Removing a track from the mix works as expected 1`] = `
Array [
  Object {
    "type": "curateRemoveTracksFromMix",
    "uri": "https://open.spotify.com/track/0c41pMosF5Kqwwetrack2",
  },
  Object {
    "key": "searchGetTracks",
    "params": Object {
      "options": Object {
        "limit": 20,
        "offset": 0,
      },
      "query": "happy",
    },
    "type": "actionTrackSearch",
  },
]
`;

exports[`SearchContainer render Swapping tracks from the mix works as expected 1`] = `
Array [
  Object {
    "a": 2,
    "b": 1,
    "type": "searchSwapTracks",
  },
]
`;
